changes to work exp

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,8 +4,7 @@ title: Projects
 permalink: /projects/
 weight: 1
 remote_projects: 
-  - git-for-wizards
-  - arduino-visitor-counter
+  <!-- - Computational_Photography -->
 ---
 
 {% include projects/index.html %}
